testdata/baselines/reference/submodule/compiler/unusedTypeParameters8.errors.txt
a.ts(1,8): error TS6196: 'T' is declared but never used.
b.ts(1,12): error TS6196: 'T' is declared but never used.


==== a.ts (1 errors) ====
    class C<T> { }
           ~~~
!!! error TS6196: 'T' is declared but never used.
    
==== b.ts (1 errors) ====
    interface C<T> { }
               ~~~
!!! error TS6196: 'T' is declared but never used.